# makeshift

./: .gitignore  README.md  pyproject.toml
docs/: _config.yml  about.md  index.md  lab.html  lab.md  lab_styles.css  makeshift.js  quickstart.md  styles.css  templates.md
examples/: ArcaneTome.txt  ArcaneTome_simple.txt  Insult.txt  Shrine.txt  Shrine_simple.txt  WeaponShop.txt  dungeon.py  gang.txt  inn.py  inn.txt  inn_test.txt  insult.txt  ruins.txt  shrine.py  shrine.txt  weapon_shop.py
makeshift/: __main__.py  ast_printer.py  cli.py  file_printer.py  scratch.py
makeshift/interpreter/: __init__.py  ast.py  lexer.py  parser.py  token.py
makeshift/interpriter/: interpriter.py  lexer.py  parser.py
proclang/: ast_printer.py  scratch.py
proclang/interpriter/: interpriter.py  lexer.py  parser.py  utils.py
site/: index.html  makeshift.js  styles.css
tests/: test_interpreter.py  test_lexer.py  test_output.txt  test_parser.py
